--- a/public/css-bootstrap/customCss.css
+++ b/public/css-bootstrap/customCss.css
@@ -15,3 +15,10 @@
   padding-right: 5px;
   padding-left: 5px;
 }
+
+.Orange {
+  background-color: orange !important;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
